--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Responsive Blog Card Slider </title>
+  <title>whywhytechnova blogs</title>
   <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'><link rel="stylesheet" href="./style.css">
@@ -33,7 +33,7 @@
         <span class="blog-slider__code">28 June 2019</span>
         <div class="blog-slider__title">Why IT graduates should start working with Linux</div>
         <div class="blog-slider__text">once you survived first 6 months with Linux, then there is no chance you getting back to Windows or Mac ever again.</div>
-        <a href="#" class="blog-slider__button">READ MORE</a>
+        <a href="archive\linux.html" class="blog-slider__button">READ MORE</a>
       </div>
     </div>
 
@@ -45,7 +45,7 @@
         <span class="blog-slider__code">02 January 2020</span>
         <div class="blog-slider__title">Why Spring is the hot favorite java framework among the developers</div>
         <div class="blog-slider__text">Spring encourages us to think of application objects as named services. Ideally, the dependencies between such services are expressed in terms of interfaces.</div>
-        <a href="#" class="blog-slider__button">READ MORE</a>
+        <a href="archive\spring.html" class="blog-slider__button">READ MORE</a>
       </div>
     </div>
 
@@ -57,7 +57,7 @@
         <span class="blog-slider__code">18 January 2020</span>
         <div class="blog-slider__title">Why developers should choose NoSQL database over SQL</div>
         <div class="blog-slider__text">Since the invention of the term 'database' in 1962 to Apache Spark and Apache Drill (Schema-less SQL) in 2015, the journey of database technology evolution is no less than a roller-coaster ride.</div>
-        <a href="#" class="blog-slider__button">READ MORE</a>
+        <a href="archive\nosql.html" class="blog-slider__button">READ MORE</a>
       </div>
     </div>
 
@@ -69,7 +69,7 @@
         <span class="blog-slider__code">25 January 2020</span>
         <div class="blog-slider__title">How Java 14's data 'records' will change the way we code</div>
         <div class="blog-slider__text">If you ask a developer that what is a bad thing about Java? they will immediately say writing an excess amount of coding. Well which is true, we need to write a lot of code for a class to be useful. For instance, a Java bean class.</div>
-        <a href="#" class="blog-slider__button">READ MORE</a>
+        <a href="archive\JavaRecords.html" class="blog-slider__button">READ MORE</a>
       </div>
     </div>
 
