--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
         <a href="archive\JavaRecords.html" class="blog-slider__button">READ MORE</a>
       </div>
     </div>
+      
+      <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
+        <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/22349836.jpg" alt="work harder . . .">
+      </div>
+      <div class="blog-slider__content">
+        <span class="blog-slider__code">06 February 2020</span>
+        <div class="blog-slider__title">How to create a Java program that can communicate with your C or CPP program through Java Native Interface</div>
+        <div class="blog-slider__text">JNI allows Java code that runs inside a JVM to interoperate with applications and libraries written in other programming languages, such as C, C++ and assembly.</div>
+        <a href="archive\jni.html" class="blog-slider__button">READ MORE</a>
+      </div>
+    </div>
 
   </div>
   <div class="blog-slider__pagination"></div>
