--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <a href="archive\JavaRecords.html" class="blog-slider__button">READ MORE</a>
       </div>
     </div>
-      
+
       <div class="blog-slider__item swiper-slide">
       <div class="blog-slider__img">
         <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/22349836.jpg" alt="work harder . . .">
@@ -85,6 +85,18 @@
         <a href="archive\jni.html" class="blog-slider__button">READ MORE</a>
       </div>
     </div>
+
+    <div class="blog-slider__item swiper-slide">
+    <div class="blog-slider__img">
+      <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/vs_ft_git/25111163.jpg" alt="work harder . . .">
+    </div>
+    <div class="blog-slider__content">
+      <span class="blog-slider__code">15 February 2020</span>
+      <div class="blog-slider__title">How to master Git and collaborate with your team as a leader</div>
+      <div class="blog-slider__text">Linus Torvalds gave two revolutionary product to the world. 1) Linux and 2) Git. Linus Torvalds wanted his developers to collaborate in his Linux Kernel development. This is how Git is born.</div>
+      <a href="archive\git.html" class="blog-slider__button">READ MORE</a>
+    </div>
+  </div>
 
   </div>
   <div class="blog-slider__pagination"></div>
