--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="blog-slider__content">
       <span class="blog-slider__code">22 February 2020</span>
-      <div class="blog-slider__title">Why PalmVein is far better biometric input?</div>
+      <div class="blog-slider__title">Why PalmVein is the far better biometric input?</div>
       <div class="blog-slider__text">Palm vein authentication works by comparing the pattern of veins in the palm. This technology is highly secure because it uses information contained within the body and is also highly accurate because the pattern of veins in the palm is complex and unique to each individual.</div>
       <a href="archive\git.html" class="blog-slider__button">READ MORE</a>
     </div>
