programming gpu in java blog is added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 <!-- partial:index.partial.html -->
 <div class="blog-slider">
   <div class="blog-slider__wrp swiper-wrapper">
+
+    <div class="blog-slider__item swiper-slide">
+    <div class="blog-slider__img">
+      <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/27907945.jpg" alt="work harder . . .">
+    </div>
+    <div class="blog-slider__content">
+      <span class="blog-slider__code">10 May 2020</span>
+      <div class="blog-slider__title">Programming the GPU in Java</div>
+      <div class="blog-slider__text">More memory is good but more bandwidth is better. Bandwidth is the amount of data that the GPU can access on the memory bus and is listed as the memory bit rate on the graphics card. Standard rates are 64 bit and 128 bits but higher end cards have much higher bit rates.</div>
+      <a href="archive\gpu.html" class="blog-slider__button" style="float: right;">READ MORE</a>
+      <a href="https://viveksoni100.github.io/" class="blog-slider__button" style="float: left;">VISIT MY WEBSITE</a>
+    </div>
+  </div>
     
     <div class="blog-slider__item swiper-slide">
     <div class="blog-slider__img">
