--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
     <div class="blog-slider__item swiper-slide">
       <div class="blog-slider__img">
+        <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/25538387.jpg" alt="work harder . . .">
+      </div>
+      <div class="blog-slider__content">
+        <span class="blog-slider__code">12 July 2020</span>
+        <div class="blog-slider__title">25 Great applications written in Java</div>
+        <div class="blog-slider__text">From space exploration to genomics, from reverse compilers to robotic controllers, Java is at the heart of today’s world. Here are a few of the countless Java apps that stand out from the crowd.</div>
+        <a href="archive\java25anvi.html" class="blog-slider__button" style="float: right;">READ MORE</a>
+        <a href="https://viveksoni100.github.io/" class="blog-slider__button" style="float: left;">VISIT MY WEBSITE</a>
+      </div>
+    </div>
+
+    <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
         <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/18879764.jpg" alt="work harder . . .">
       </div>
       <div class="blog-slider__content">
