prerender.js blog is added...

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
     <div class="blog-slider__item swiper-slide">
       <div class="blog-slider__img">
+        <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/21778286.jpg" alt="work harder . . .">
+      </div>
+      <div class="blog-slider__content">
+        <span class="blog-slider__code">14 September 2020</span>
+        <div class="blog-slider__title">Load your web-pages really fast on any browser using prerender.js</div>
+        <div class="blog-slider__text">What if a browser could anticipated the requests the user was going to need, and could complete those requests ahead of time? If this was possible, the performance impact would be significant. Even if just the few critical resources needed were already downloaded, pages would render much faster.</div>
+        <a href="archive\prerender-js.html" class="blog-slider__button" style="float: right;">READ MORE</a>
+        <a href="https://viveksoni100.github.io/" class="blog-slider__button" style="float: left;">VISIT MY WEBSITE</a>
+      </div>
+    </div>
+
+    <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
         <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/25538387.jpg" alt="work harder . . .">
       </div>
       <div class="blog-slider__content">
