Lambda expression decoding in JVM blog is added...

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
     <div class="blog-slider__item swiper-slide">
       <div class="blog-slider__img">
+        <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/32134583.jpg" alt="work harder . . .">
+      </div>
+      <div class="blog-slider__content">
+        <span class="blog-slider__code">06 November 2020</span>
+        <div class="blog-slider__title">How do lambda expressions really work in Java?</div>
+        <div class="blog-slider__text">What does a lambda expression look like inside Java code and inside the JVM? It is obviously some type of value, and Java permits only two sorts of values: primitive types and object references. Lambdas are obviously not primitive types, so a lambda expression must therefore be some sort of expression that returns an object reference.</div>
+        <a href="archive\lambda-exp.html" class="blog-slider__button" style="float: right;">READ MORE</a>
+        <a href="https://viveksoni100.github.io/" class="blog-slider__button" style="float: left;">VISIT MY WEBSITE</a>
+      </div>
+    </div>
+
+    <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
         <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/21778286.jpg" alt="work harder . . .">
       </div>
       <div class="blog-slider__content">
