The art of software craftsman - 1 blog is added...

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
     <div class="blog-slider__item swiper-slide">
       <div class="blog-slider__img">
+        <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/Software_Craftmanship_1.jpg">
+      </div>
+      <div class="blog-slider__content">
+        <span class="blog-slider__code">20 December 2020</span>
+        <div class="blog-slider__title">The art of software craftsmanship - 1</div>
+        <div class="blog-slider__text">“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.” – Martin Fowler (Author of Clean Code : A Handbook of Agile Software)</div>
+        <a href="archive\clean-code-1.html" class="blog-slider__button" style="float: right;">READ MORE</a>
+        <a href="https://viveksoni100.github.io/" class="blog-slider__button" style="float: left;">VISIT MY WEBSITE</a>
+      </div>
+    </div>
+
+    <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
         <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/lambda.jpg" alt="work harder . . .">
       </div>
       <div class="blog-slider__content">
