CC-2 blog is started

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
     <div class="blog-slider__item swiper-slide">
       <div class="blog-slider__img">
+        <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/Software_Craftmanship_2.jpg">
+      </div>
+      <div class="blog-slider__content">
+        <span class="blog-slider__code">Lorem Ipsum</span>
+        <div class="blog-slider__title">The art of software craftsmanship - 2</div>
+        <div class="blog-slider__text">“First, solve the problem. Then, write the code.” – John Johnson</div>
+        <a href="archive\clean-code-2.html" class="blog-slider__button" style="float: right;">READ MORE</a>
+        <a href="https://viveksoni100.github.io/" class="blog-slider__button" style="float: left;">VISIT MY WEBSITE</a>
+      </div>
+    </div>
+
+    <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
         <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/Software_Craftmanship_1.jpg">
       </div>
       <div class="blog-slider__content">
