--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
 <div class="blog-slider">
   <div class="blog-slider__wrp swiper-wrapper">
 
@@ -19,9 +18,9 @@
         <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/Software_Craftmanship_2.jpg">
       </div>
       <div class="blog-slider__content">
-        <span class="blog-slider__code">Lorem Ipsum</span>
+        <span class="blog-slider__code">21 February 2021</span>
         <div class="blog-slider__title">The art of software craftsmanship - 2</div>
-        <div class="blog-slider__text">“First, solve the problem. Then, write the code.” – John Johnson</div>
+        <div class="blog-slider__text">Master programmers think of systems as stories to be told rather than programs to be written. They use the facilities of their chosen programming language to construct a much richer and more expressive language that can be used to tell that story.</div>
         <a href="archive\clean-code-2.html" class="blog-slider__button" style="float: right;">READ MORE</a>
         <a href="https://viveksoni100.github.io/" class="blog-slider__button" style="float: left;">VISIT MY WEBSITE</a>
       </div>
