3rd blog is added in the category of software craftsmanship

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 
     <div class="blog-slider__item swiper-slide">
       <div class="blog-slider__img">
+        <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/Software_Craftmanship_3.jpg">
+      </div>
+      <div class="blog-slider__content">
+        <span class="blog-slider__code">15 March 2021</span>
+        <div class="blog-slider__title">The art of software craftsmanship - 3</div>
+        <div class="blog-slider__text"> A clever person solves a problem.<br/>A wise person AVOIDS it.<br/>- Albert Einstein</div>
+        <a href="archive\clean-code-3.html" class="blog-slider__button" style="float: right;">READ MORE</a>
+        <a href="https://viveksoni100.github.io/" class="blog-slider__button" style="float: left;">VISIT MY WEBSITE</a>
+      </div>
+    </div>
+
+    <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
         <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/Software_Craftmanship_2.jpg">
       </div>
       <div class="blog-slider__content">
