--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 <body>
 <div class="blog-slider">
   <div class="blog-slider__wrp swiper-wrapper">
+      
+      <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
+        <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/Software_Craftmanship_3.jpg">
+      </div>
+      <div class="blog-slider__content">
+        <span class="blog-slider__code">25 April 2021</span>
+        <div class="blog-slider__title">The art of software craftsmanship - 4</div>
+        <div class="blog-slider__text">All race conditions, deadlock conditions, and concurrent update problems are due to mutable variables</div>
+        <a href="archive\clean-code-3.html" class="blog-slider__button" style="float: right;">READ MORE</a>
+        <a href="https://viveksoni100.github.io/" class="blog-slider__button" style="float: left;">VISIT MY WEBSITE</a>
+      </div>
+    </div>
 
     <div class="blog-slider__item swiper-slide">
       <div class="blog-slider__img">
