--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 <body>
 <div class="blog-slider">
   <div class="blog-slider__wrp swiper-wrapper">
+
+    <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
+        <img src="https://raw.githubusercontent.com/viveksoni100/images.blogs/master/jhipster.jpg">
+      </div>
+      <div class="blog-slider__content">
+        <span class="blog-slider__code">24 July 2022</span>
+        <div class="blog-slider__title">Bootstrap a full-stack application in 10 minutes using Java Hipster</div>
+        <div class="blog-slider__text">JHipster used to quickly generate, develop, and deploy modern web applications and microservice architectures. It supports various front and back-end technologies such as Angular, React, Vue, Ionic, React Native,Spring Boot (with Java or Kotlin), Micronaut, Quarkus, Node.js, .NET, Docker, Kubernetes, AWS, Azure, Cloud Foundry, Google Cloud Platform, Heroku, OpenShift.</div>
+        <a href="archive\jhipster.html" class="blog-slider__button" style="float: right;">READ MORE</a>
+        <a href="https://viveksoni100.github.io/" class="blog-slider__button" style="float: left;">VISIT MY WEBSITE</a>
+      </div>
+    </div>
       
       <div class="blog-slider__item swiper-slide">
       <div class="blog-slider__img">
