--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1375036880340384"
+     crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <title>whywhytechnova blogs</title>
   <meta name="viewport"
